--- a/BancoEletronico/TelaInicial/EditarCliente.xaml
+++ b/BancoEletronico/TelaInicial/EditarCliente.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TelaInicial.CadastrarCliente"
+﻿<Window x:Class="TelaInicial.EditarCliente"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="EditarCliente" Height="480" Width="854">
     <Grid>
-        <Label x:Name="lblCadastrarCliente" Content="Editar Cliente" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
+        <Label x:Name="lblEditarCliente" Content="Editar Cliente" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Label x:Name="lblNome" Content="Nome:" HorizontalAlignment="Left" Margin="30,100,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblDtNascimento" Content="Data de nascimento:" HorizontalAlignment="Left" Margin="30,155,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblCPF" Content="CPF:" HorizontalAlignment="Left" Margin="30,210,0,0" VerticalAlignment="Top"/>
