--- a/BancoEletronico/TelaInicial/ExcluirCliente.xaml
+++ b/BancoEletronico/TelaInicial/ExcluirCliente.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TelaInicial.CadastrarCliente"
+﻿<Window x:Class="TelaInicial.ExcluirCliente"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,10 +7,7 @@
         mc:Ignorable="d"
         Title="ExcluirCliente" Height="480" Width="854">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Label x:Name="lblCadastrarCliente" Content="Excluir Cliente" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
+        <Label x:Name="lblExcluirCliente" Content="Excluir Cliente" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Label x:Name="lblNome" Content="ID do cliente:" HorizontalAlignment="Left" Margin="46,147,0,0" VerticalAlignment="Top" FontSize="16"/>
         <TextBox x:Name="txtNome" HorizontalAlignment="Left" Height="24" Margin="159,152,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
