--- a/BancoEletronico/TelaInicial/CadastrarCliente.xaml
+++ b/BancoEletronico/TelaInicial/CadastrarCliente.xaml
@@ -19,6 +19,7 @@
         <TextBox x:Name="txtCPF" HorizontalAlignment="Left" Height="23" Margin="170,213,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txtRua" HorizontalAlignment="Left" Height="23" Margin="170,323,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txtNumero" HorizontalAlignment="Left" Height="23" Margin="170,378,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="btnVoltar" Content="Voltar" HorizontalAlignment="Left" Margin="761,418,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltar_Click"/>
 
     </Grid>
 </Window>
