--- a/BancoEletronico/TelaInicial/ExcluirCliente.xaml
+++ b/BancoEletronico/TelaInicial/ExcluirCliente.xaml
@@ -10,6 +10,7 @@
         <Label x:Name="lblExcluirCliente" Content="Excluir Cliente" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Label x:Name="lblNome" Content="ID do cliente:" HorizontalAlignment="Left" Margin="46,147,0,0" VerticalAlignment="Top" FontSize="16"/>
         <TextBox x:Name="txtNome" HorizontalAlignment="Left" Height="24" Margin="159,152,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button Name="btnVoltar" Content="Voltar" HorizontalAlignment="Left" Margin="761,418,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltar_Click"/>
 
     </Grid>
 </Window>
