--- a/BancoEletronico/TelaInicial/ExcluirConta.xaml
+++ b/BancoEletronico/TelaInicial/ExcluirConta.xaml
@@ -11,6 +11,7 @@
         <Label x:Name="lvlExcluirConta" Content="Número da Conta:" HorizontalAlignment="Left" Margin="39,58,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtExcluitConta" HorizontalAlignment="Left" Height="23" Margin="183,60,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="btnExcluir" Content="Excluir" HorizontalAlignment="Left" Margin="344,62,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnVoltarExContas" Content="Voltar" HorizontalAlignment="Left" Margin="733,421,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltarExContas_Click"/>
 
     </Grid>
 </Window>
