--- a/BancoEletronico/TelaInicial/ListarContas.xaml
+++ b/BancoEletronico/TelaInicial/ListarContas.xaml
@@ -8,6 +8,7 @@
         Title="ListarContas" Height="480" Width="825">
     <Grid>
         <Label x:Name="lblListarContas" Content="Listar Contas" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
+        <Button x:Name="btnVoltarListarContas" Content="Voltar" HorizontalAlignment="Left" Margin="733,421,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltarListarContas_Click"/>
 
     </Grid>
 </Window>
