Cadastro de endereço e cliente

--- a/BancoEletronico/TelaInicial/CadastrarCliente.xaml
+++ b/BancoEletronico/TelaInicial/CadastrarCliente.xaml
@@ -20,6 +20,7 @@
         <TextBox x:Name="txtRua" HorizontalAlignment="Left" Height="23" Margin="170,323,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txtNumero" HorizontalAlignment="Left" Height="23" Margin="170,378,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="btnVoltar" Content="Voltar" HorizontalAlignment="Left" Margin="761,418,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltar_Click"/>
+        <Button x:Name="btnSalvar" Content="Salvar" HorizontalAlignment="Left" Margin="651,418,0,0" VerticalAlignment="Top" Width="75" Click="btnSalvar_Click"/>
 
     </Grid>
 </Window>
