--- a/BancoEletronico/TelaInicial/Depositar.xaml
+++ b/BancoEletronico/TelaInicial/Depositar.xaml
@@ -5,8 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TelaInicial"
         mc:Ignorable="d"
-        Title="Depositar" Height="480" Width="825">
+        Title="Depositar" Height="280" Width="400">
     <Grid>
-        
+        <TextBox x:Name="txtVlrDepositar" Height="23" Margin="95,118,177,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <Label x:Name="lblDepositar" Content="Depositar" Margin="149,28,148,0" VerticalAlignment="Top" FontSize="20"/>
+        <Label x:Name="lblVlrDepositar" Content="Valor:" HorizontalAlignment="Left" Margin="40,115,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnFechar" Content="Fechar" HorizontalAlignment="Left" Margin="307,219,0,0" VerticalAlignment="Top" Width="75" Click="btnFechar_Click"/>
+        <Button Content="Depositar" HorizontalAlignment="Left" Margin="240,120,0,0" VerticalAlignment="Top" Width="75"/>
+
     </Grid>
 </Window>
