--- a/BancoEletronico/TelaInicial/LoginCliente.xaml
+++ b/BancoEletronico/TelaInicial/LoginCliente.xaml
@@ -6,11 +6,11 @@
         xmlns:local="clr-namespace:TelaInicial"
         mc:Ignorable="d"
         Title="LoginCliente" Height="480" Width="854">
-    
+
     <Grid>
         <Label x:Name="label" Content="Menu Cliente" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
-        <Button x:Name="btnSacar" Content="Sacar" Margin="90,225,0,0" VerticalAlignment="Top" Height="40" HorizontalAlignment="Left" Width="110" />
-        <Button x:Name="btnDepositar" Content="Depositar" Margin="368,225,368,0" VerticalAlignment="Top" Height="40"/>
+        <Button x:Name="btnSacar" Content="Sacar" Margin="90,225,0,0" VerticalAlignment="Top" Height="40" HorizontalAlignment="Left" Width="110" Click="btnSacar_Click" />
+        <Button x:Name="btnDepositar" Content="Depositar" Margin="368,225,368,0" Height="40" VerticalAlignment="Top" Click="btnDepositar_Click"/>
         <Button x:Name="btnExtrato" Content="Extrato" Margin="646,225,90,0" VerticalAlignment="Top" Height="40"/>
         <Button x:Name="btnVoltar" Content="Voltar" HorizontalAlignment="Left" Margin="761,419,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltar_Click"/>
 
