--- a/BancoEletronico/TelaInicial/ListarClientes.xaml
+++ b/BancoEletronico/TelaInicial/ListarClientes.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <Label x:Name="lblListarCliente" Content="Listar Clientes" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Button Name="btnVoltar" Content="Voltar" HorizontalAlignment="Left" Margin="761,418,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltar_Click"/>
+        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="46,109,0,0" VerticalAlignment="Top" Height="266" Width="725" SelectionChanged="dataGrid_SelectionChanged"/>
 
     </Grid>
 </Window>
