--- a/BancoEletronico/TelaInicial/EditarCliente.xaml
+++ b/BancoEletronico/TelaInicial/EditarCliente.xaml
@@ -18,7 +18,7 @@
         <Button x:Name="btnEditar" Content="Editar" Margin="652,418,120,0" VerticalAlignment="Top" Click="btnEditar_Click" IsEnabled="False"/>
         <Label x:Name="lblID" Content="ID do cliente" HorizontalAlignment="Left" Margin="34,104,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtID" HorizontalAlignment="Left" Height="23" Margin="174,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="btnVerifica" Content="Verificar" HorizontalAlignment="Left" Margin="350,110,0,0" VerticalAlignment="Top" Width="74" Click="btnVerifica_Click"/>
+        <Button x:Name="btnVerificar" Content="Verificar" HorizontalAlignment="Left" Margin="350,110,0,0" VerticalAlignment="Top" Width="74" Click="btnVerificar_Click"/>
 
     </Grid>
 </Window>
