--- a/BancoEletronico/TelaInicial/ListarClientes.xaml
+++ b/BancoEletronico/TelaInicial/ListarClientes.xaml
@@ -9,8 +9,16 @@
     <Grid>
         <Label x:Name="lblListarCliente" Content="Listar Clientes" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Button Name="btnVoltar" Content="Voltar" HorizontalAlignment="Left" Margin="761,418,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltar_Click"/>
-        <DataGrid x:Name="dtgListar" HorizontalAlignment="Left" Height="251" Margin="46,118,0,0" VerticalAlignment="Top" Width="745" >
-            
+        <DataGrid SelectedValuePath="ClienteID" x:Name="dtgListar" HorizontalGridLinesBrush="{x:Null}" CanUserReorderColumns="False" CanUserResizeColumns="False" IsReadOnly="True"  CanUserResizeRows="False" Margin="0,76,0,58.4" Background="{x:Null}" SelectionChanged="DtGrid_SelectionChanged" VerticalGridLinesBrush="{x:Null}" AutoGenerateColumns="False" GridLinesVisibility="None" CanUserDeleteRows="False" BorderBrush="{x:Null}">
+            <DataGrid.Columns>
+                <DataGridTextColumn  Binding="{Binding ClienteID}" Header="ID" Width="*" SortDirection="Ascending"  />
+                <DataGridTextColumn  Binding="{Binding Nome}" Header="Nome" Width="*" SortDirection="Ascending"  />
+                <DataGridTextColumn  Binding="{Binding Cpf}" Header="Cpf" Width="*" SortDirection="Ascending" />
+                <DataGridTextColumn  Binding="{Binding DataNascimento}" Header="Data Nascimento" Width="*" SortDirection="Ascending" />
+                <DataGridTextColumn  Binding="{Binding Endereco}" Header="Endereco" Width="*" SortDirection="Ascending" />
+                <DataGridTextColumn  Binding="{Binding Numero}" Header="Numero" Width="*" SortDirection="Ascending" />
+                
+            </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="btnListar" Content="Listar" HorizontalAlignment="Left" Margin="647,418,0,11" Width="75" Click="btnListar_Click"/>
 
