--- a/BancoEletronico/TelaInicial/ListarClientes.xaml
+++ b/BancoEletronico/TelaInicial/ListarClientes.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Label x:Name="lblListarCliente" Content="Listar Clientes" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Button Name="btnVoltar" Content="Voltar" HorizontalAlignment="Left" Margin="761,418,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltar_Click"/>
-        <DataGrid SelectedValuePath="ClienteID" x:Name="dtgListar" HorizontalGridLinesBrush="{x:Null}" CanUserReorderColumns="False" CanUserResizeColumns="False" IsReadOnly="True"  CanUserResizeRows="False" Margin="24,80,27,69" Background="{x:Null}" SelectionChanged="DtGrid_SelectionChanged" VerticalGridLinesBrush="{x:Null}" AutoGenerateColumns="False" GridLinesVisibility="None" CanUserDeleteRows="False" BorderBrush="{x:Null}">
+        <DataGrid x:Name="dtgListar" HorizontalAlignment="Left" Margin="46,80,0,0" VerticalAlignment="Top" Height="287" Width="699" SelectionChanged="dataGrid_SelectionChanged">
             <DataGrid.Columns>
                 <DataGridTextColumn  Binding="{Binding ClienteID}" Header="ID" Width="*" SortDirection="Ascending"  />
                 <DataGridTextColumn  Binding="{Binding Nome}" Header="Nome" Width="*" SortDirection="Ascending"  />
