--- a/BancoEletronico/TelaInicial/ListarContas.xaml
+++ b/BancoEletronico/TelaInicial/ListarContas.xaml
@@ -9,6 +9,14 @@
     <Grid>
         <Label x:Name="lblListarContas" Content="Listar Contas" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Button x:Name="btnVoltarListarContas" Content="Voltar" HorizontalAlignment="Left" Margin="733,421,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltarListarContas_Click"/>
-
+        <DataGrid x:Name="dtgListarContas" HorizontalAlignment="Left" Margin="46,80,0,0" VerticalAlignment="Top" Height="287" Width="699" SelectionChanged="dataGrid_SelectionChanged">
+             <DataGrid.Columns>
+                 <DataGridTextColumn  Binding="{Binding ContaID}" Header="ID" Width="*" SortDirection="Ascending"  />
+                 <DataGridTextColumn  Binding="{Binding Nome}" Header="Nome do Cliente" Width="*" SortDirection="Ascending"  />
+                 <DataGridTextColumn  Binding="{Binding NumeroConta}" Header="Número da conta" Width="*" SortDirection="Ascending" />
+                 <DataGridTextColumn  Binding="{Binding TpConta}" Header="Tipo da conta" Width="*" SortDirection="Ascending" />
+                 
+        </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
