Adicionando método cadastrar conta

--- a/BancoEletronico/TelaInicial/CadastrarConta.xaml
+++ b/BancoEletronico/TelaInicial/CadastrarConta.xaml
@@ -1,17 +1,24 @@
-﻿<Window x:Class="TelaInicial.CadastrarConta"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Models="clr-namespace:Models;assembly=Models" x:Class="TelaInicial.CadastrarConta"
         Title="CadastrarConta" Height="480" Width="825">
     <Grid>
         <Label x:Name="lblCadastrarConta" Content="Cadastrar Conta" HorizontalAlignment="Left" Margin="53,35,0,0" VerticalAlignment="Top" FontSize="28"/>
-        <Label x:Name="lblNumeroConta" Content="Número da nova conta:" HorizontalAlignment="Left" Margin="69,122,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtCadastrarConta" HorizontalAlignment="Left" Height="23" Margin="259,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="lblTipoConta" Content="Tipo Conta:" HorizontalAlignment="Left" Margin="69,168,0,0" VerticalAlignment="Top"/>
-        <ComboBox HorizontalAlignment="Left" Margin="259,172,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="label" Content="Id Cliente:" HorizontalAlignment="Left" Margin="69,227,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtBuscarIdCliente" HorizontalAlignment="Left" Height="23" Margin="259,230,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="btnBuscar" Content="Buscar" HorizontalAlignment="Left" Margin="448,230,0,0" VerticalAlignment="Top" Width="75"/>
+        <Label x:Name="lblNumeroConta" Content="Número da nova conta:" HorizontalAlignment="Left" Margin="69,139,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtCadastrarConta" HorizontalAlignment="Left" Height="23" Margin="259,142,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lblTipoConta" Content="Tipo Conta:" HorizontalAlignment="Left" Margin="69,82,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label" Content="Id Cliente:" HorizontalAlignment="Left" Margin="69,113,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtBuscarIdCliente" HorizontalAlignment="Left" Height="23" Margin="259,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" IsEnabled="true"/>
+        <Button x:Name="btnBuscar" Content="Buscar" HorizontalAlignment="Left" Margin="445,117,0,0" VerticalAlignment="Top" Width="75" Click="btnBuscar_Click"/>
         <Button x:Name="btnVoltarCadastrarConta" Content="Voltar" HorizontalAlignment="Left" Margin="733,421,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltarCadastrarConta_Click"/>
+        <Button x:Name="btnSalvar" Content="Salvar" HorizontalAlignment="Left" Margin="639,421,0,0" VerticalAlignment="Top" Width="75" Click="btnSalvar_Click" IsEnabled="False"/>
+        <Label x:Name="lblSaldo" Content="Saldo:" HorizontalAlignment="Left" Margin="69,167,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtSaldo" HorizontalAlignment="Left" Height="23" Margin="259,170,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lblSenha" Content="Senha:" HorizontalAlignment="Left" Margin="69,193,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtSenha" HorizontalAlignment="Left" Height="23" Margin="259,198,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtTipoConta" HorizontalAlignment="Left" Height="23" Margin="259,82,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="btnVerificarConta" Content="Verificar" HorizontalAlignment="Left" Margin="445,82,0,0" VerticalAlignment="Top" Width="75" Click="btnVerificarConta_Click"/>
 
     </Grid>
 </Window>
