--- a/BancoEletronico/TelaInicial/ListarContas.xaml
+++ b/BancoEletronico/TelaInicial/ListarContas.xaml
@@ -5,18 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TelaInicial"
         mc:Ignorable="d"
-        Title="ListarContas" Height="480" Width="825">
+        Title="ListarContas" Height="480" Width="854">
     <Grid>
         <Label x:Name="lblListarContas" Content="Listar Contas" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Button x:Name="btnVoltarListarContas" Content="Voltar" HorizontalAlignment="Left" Margin="733,421,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltarListarContas_Click"/>
-        <DataGrid x:Name="dtgListarContas" HorizontalAlignment="Left" Margin="46,80,0,0" VerticalAlignment="Top" Height="287" Width="699" SelectionChanged="dataGrid_SelectionChanged">
+        <DataGrid x:Name="dtgListarContasCorrente" HorizontalAlignment="Left" Margin="26,100,0,0" VerticalAlignment="Top" Height="287" Width="392" SelectionChanged="dataGrid_SelectionChanged">
              <DataGrid.Columns>
-                 <DataGridTextColumn  Binding="{Binding ContaID}" Header="ID" Width="*" SortDirection="Ascending"  />
-                 <DataGridTextColumn  Binding="{Binding Nome}" Header="Nome do Cliente" Width="*" SortDirection="Ascending"  />
-                 <DataGridTextColumn  Binding="{Binding NumeroConta}" Header="Número da conta" Width="*" SortDirection="Ascending" />
-                 <DataGridTextColumn  Binding="{Binding TpConta}" Header="Tipo da conta" Width="*" SortDirection="Ascending" />
-                 
-        </DataGrid.Columns>
+                 <DataGridTextColumn  Binding="{Binding ContaCorrenteID}" Header="ID" Width="*" SortDirection="Ascending"  />
+                 <DataGridTextColumn  Binding="{Binding Numero}" Header="Nunero da Conta" Width="*" SortDirection="Ascending"  />
+                <DataGridTextColumn  Binding="{Binding _Cliente.Nome}" Header="Nome do cliente" Width="*" SortDirection="Ascending" />
+            </DataGrid.Columns>
+        </DataGrid>
+        <DataGrid x:Name="dtgListarContasPoupanca" HorizontalAlignment="Left" Margin="423,100,0,0" VerticalAlignment="Top" Height="287" Width="392" SelectionChanged="dataGrid_SelectionChanged">
+            <DataGrid.Columns>
+                <DataGridTextColumn  Binding="{Binding ContaPoupancaID}" Header="ID" Width="*" SortDirection="Ascending"  />
+                <DataGridTextColumn  Binding="{Binding Numero}" Header="Nunero da Conta" Width="*" SortDirection="Ascending"  />
+                <DataGridTextColumn  Binding="{Binding _Cliente.Nome}" Header="Nome do cliente" Width="*" SortDirection="Ascending" />
+            </DataGrid.Columns>
         </DataGrid>
     </Grid>
 </Window>
