--- a/BancoEletronico/TelaInicial/Sacar.xaml
+++ b/BancoEletronico/TelaInicial/Sacar.xaml
@@ -11,7 +11,7 @@
         <TextBox x:Name="txtVlrSacar" HorizontalAlignment="Left" Height="23" Margin="95,172,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" SelectionOpacity="-4"/>
         <Label x:Name="lblVlrSacar" Content="Valor:" HorizontalAlignment="Left" Margin="40,169,0,0" VerticalAlignment="Top"/>
         <Button x:Name="btnFechar" Content="Fechar" HorizontalAlignment="Left" Margin="307,219,0,0" VerticalAlignment="Top" Width="75" Click="btnFechar_Click"/>
-        <Button x:Name="btnSacar" Content="Sacar" Margin="240,174,77,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnSacar" Content="Sacar" Margin="240,174,77,0" VerticalAlignment="Top" Click="btnSacar_Click"/>
 
     </Grid>
 </Window>
