--- a/BancoEletronico/TelaInicial/ListarClientes.xaml
+++ b/BancoEletronico/TelaInicial/ListarClientes.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Label x:Name="lblListarCliente" Content="Listar Clientes" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Button Name="btnVoltar" Content="Voltar" HorizontalAlignment="Left" Margin="761,418,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltar_Click"/>
-        <DataGrid x:Name="dtgListar" HorizontalAlignment="Left" Margin="46,80,0,0" VerticalAlignment="Top" Height="287" Width="699" SelectionChanged="dataGrid_SelectionChanged">
+        <DataGrid x:Name="dtgListar" HorizontalAlignment="Left" Margin="46,80,0,0" VerticalAlignment="Top" Height="287" Width="699" SelectionChanged="dataGrid_SelectionChanged" IsEnabled="False">
             <DataGrid.Columns>
                 <DataGridTextColumn  Binding="{Binding ClienteID}" Header="ID" Width="*" SortDirection="Ascending"  />
                 <DataGridTextColumn  Binding="{Binding Nome}" Header="Nome" Width="*" SortDirection="Ascending"  />
@@ -17,6 +17,7 @@
                 <DataGridTextColumn  Binding="{Binding DtAniver}" Header="Data Nascimento" Width="*" SortDirection="Ascending" />
                 <DataGridTextColumn  Binding="{Binding _Endereco.Rua}" Header="Endereco" Width="*" SortDirection="Ascending" />
                 <DataGridTextColumn  Binding="{Binding _Endereco.Numero}" Header="Numero" Width="*" SortDirection="Ascending" />
+                
                 
             </DataGrid.Columns>
         </DataGrid>
