--- a/BancoEletronico/TelaInicial/EditarCliente.xaml
+++ b/BancoEletronico/TelaInicial/EditarCliente.xaml
@@ -6,7 +6,10 @@
         xmlns:local="clr-namespace:TelaInicial"
         mc:Ignorable="d"
         Title="EditarCliente" Height="480" Width="854">
-    <Grid>
+    <Grid Cursor="">
+        <Grid.Background>
+            <ImageBrush ImageSource="C:\Users\Felipe\Source\Repos\ProjetoCSharp\BancoEletronico\TelaInicial\TestBack1.png"/>
+        </Grid.Background>
         <Label x:Name="lblEditarCliente" Content="Editar Cliente" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Label x:Name="lblNome" Content="Nome:" HorizontalAlignment="Left" Margin="34,162,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblDtNascimento" Content="Data de nascimento:" HorizontalAlignment="Left" Margin="34,216,0,0" VerticalAlignment="Top"/>
