--- a/BancoEletronico/TelaInicial/ExcluirCliente.xaml
+++ b/BancoEletronico/TelaInicial/ExcluirCliente.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="ExcluirCliente" Height="480" Width="854">
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="C:\Users\Felipe\Source\Repos\ProjetoCSharp\BancoEletronico\TelaInicial\TestBack1.png"/>
+        </Grid.Background>
         <Label x:Name="lblExcluirCliente" Content="Excluir Cliente" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Label x:Name="lblNome" Content="ID do cliente:" HorizontalAlignment="Left" Margin="46,147,0,0" VerticalAlignment="Top" FontSize="16"/>
         <TextBox x:Name="txtID" HorizontalAlignment="Left" Height="24" Margin="159,152,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
