--- a/BancoEletronico/TelaInicial/ListarClientes.xaml
+++ b/BancoEletronico/TelaInicial/ListarClientes.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="ListarClientes" Height="480" Width="854">
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="C:\Users\Felipe\Source\Repos\ProjetoCSharp\BancoEletronico\TelaInicial\TestBack1.png"/>
+        </Grid.Background>
         <Label x:Name="lblListarCliente" Content="Listar Clientes" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Button Name="btnVoltar" Content="Voltar" HorizontalAlignment="Left" Margin="761,418,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltar_Click"/>
         <DataGrid x:Name="dtgListar" HorizontalAlignment="Left" Margin="46,80,0,0" VerticalAlignment="Top" Height="287" Width="699" SelectionChanged="dataGrid_SelectionChanged" IsEnabled="False">
