--- a/BancoEletronico/TelaInicial/ListarContas.xaml
+++ b/BancoEletronico/TelaInicial/ListarContas.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="ListarContas" Height="480" Width="854">
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="C:\Users\Felipe\Source\Repos\ProjetoCSharp\BancoEletronico\TelaInicial\TestBack1.png"/>
+        </Grid.Background>
         <Label x:Name="lblListarContas" Content="Listar Contas" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Button x:Name="btnVoltarListarContas" Content="Voltar" HorizontalAlignment="Left" Margin="733,421,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltarListarContas_Click"/>
         <DataGrid x:Name="dtgListarContasCorrente" HorizontalAlignment="Left" Margin="26,100,0,0" VerticalAlignment="Top" Height="287" Width="392" SelectionChanged="dataGrid_SelectionChanged" IsEnabled="False">
