--- a/BancoEletronico/TelaInicial/LoginCliente.xaml
+++ b/BancoEletronico/TelaInicial/LoginCliente.xaml
@@ -8,13 +8,16 @@
         Title="LoginCliente" Height="480" Width="854">
 
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="C:\Users\Felipe\Source\Repos\ProjetoCSharp\BancoEletronico\TelaInicial\TestBack1.png"/>
+        </Grid.Background>
         <Label x:Name="label" Content="Menu Cliente" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Button x:Name="btnSacar" Content="Sacar" Margin="90,225,0,0" VerticalAlignment="Top" Height="40" HorizontalAlignment="Left" Width="110" Click="btnSacar_Click" />
         <Button x:Name="btnDepositar" Content="Depositar" Margin="368,225,368,0" Height="40" VerticalAlignment="Top" Click="btnDepositar_Click"/>
         <Button x:Name="btnExtrato" Content="Extrato" Margin="646,225,90,0" VerticalAlignment="Top" Height="40"/>
         <Button x:Name="btnVoltar" Content="Voltar" HorizontalAlignment="Left" Margin="761,419,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltar_Click"/>
-
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="197,186,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" ContextMenuClosing="textBlock_ContextMenuClosing" FontSize="20" FontWeight="Bold"/>
+        <Label x:Name="lblCliente"  HorizontalAlignment="Left" Margin="46,116,0,0" VerticalAlignment="Top" FontSize="18" Initialized="lblCliente_Initialized"/>
+        <Button Content="Cliente" HorizontalAlignment="Left" Margin="192,121,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
 
     </Grid>
 </Window>
