--- a/BancoEletronico/TelaInicial/LoginGerente.xaml
+++ b/BancoEletronico/TelaInicial/LoginGerente.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="LoginGerente" Height="480" Width="854">
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="C:\Users\Felipe\Source\Repos\ProjetoCSharp\BancoEletronico\TelaInicial\TestBack1.png"/>
+        </Grid.Background>
         <Label x:Name="lblMenuGerente" Content="Menu Gerente" HorizontalAlignment="Left" Margin="46,28,0,0" VerticalAlignment="Top" FontSize="28"/>
         <Button x:Name="btnCadastrarClientes" Content="Cadastrar Cliente" HorizontalAlignment="Left" Margin="60,161,0,248" Width="98" Height="40" Click="btnCadastrarClientes_Click"/>
         <Button x:Name="btnListarClientes" Content="Listar Clientes" Margin="260,161,488,0" VerticalAlignment="Top" Height="40" Click="btnListarClientes_Click"/>
