--- a/BancoEletronico/TelaInicial/EditarConta.xaml
+++ b/BancoEletronico/TelaInicial/EditarConta.xaml
@@ -8,7 +8,10 @@
         </Grid.Background>
         <Label x:Name="lblEditarConta" Content="Editar Conta" HorizontalAlignment="Left" Margin="44,36,0,0" VerticalAlignment="Top" IsEnabled="False" FontSize="28"/>
         <Label x:Name="lblEditarConta1" Content="Tipo de conta:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="44,157,0,0"/>
-        <ComboBox x:Name="comboBoxEditarTipoConta" HorizontalAlignment="Left" Margin="161,160,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="comboBoxEditarTipoConta_SelectionChanged"/>
+        <ComboBox x:Name="comboBoxEditarTipoConta" HorizontalAlignment="Left" Margin="161,160,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="comboBoxEditarTipoConta_SelectionChanged">
+            <ComboBoxItem x:Name="contaC" Content="Conta Corrente" HorizontalAlignment="Left" Width="118"/>
+            <ComboBoxItem x:Name="contaP" Content="Conta Poupanca" HorizontalAlignment="Left" Width="118"/>
+        </ComboBox>
         <Button x:Name="btnVoltarEditarConta" Content="Voltar" HorizontalAlignment="Left" Margin="733,420,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltarEditarConta_Click"/>
         <Label x:Name="llId" Content="id do cliente" HorizontalAlignment="Left" Margin="44,113,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtIdConta" HorizontalAlignment="Left" Height="23" Margin="161,113,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
