--- a/BancoEletronico/TelaInicial/Depositar.xaml
+++ b/BancoEletronico/TelaInicial/Depositar.xaml
@@ -12,7 +12,7 @@
         <Label x:Name="lblDepositar" Content="Depositar" Margin="149,28,148,0" VerticalAlignment="Top" FontSize="20"/>
         <Label x:Name="lblVlrDepositar" Content="Valor:" HorizontalAlignment="Left" Margin="40,115,0,0" VerticalAlignment="Top"/>
         <Button x:Name="btnFechar" Content="Fechar" HorizontalAlignment="Left" Margin="307,219,0,0" VerticalAlignment="Top" Width="75" Click="btnFechar_Click"/>
-        <Button Content="Depositar" HorizontalAlignment="Left" Margin="240,120,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnDepositar" Content="Depositar" HorizontalAlignment="Left" Margin="240,120,0,0" VerticalAlignment="Top" Width="75" Click="btnDepositar_Click" />
 
     </Grid>
 </Window>
